[package]
name = "boxen-gpio"
version = "0.1.0"
authors = ["totalorder <anton@deadlock.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "0.12.0"
crossbeam-channel = "0.5.1"

[lib]
name = "boxen_gpio"
path = "src/lib.rs"

[[bin]]
name = "boxen-gpio"
path = "src/main.rs"